<resources>
    <string name="show_create_room">创建房间</string>
    <string name="show_create_tips1">欢迎来到声网直播！\n视频『高清』升级，人更美、物更真，体验更流畅，\n为直播变现增添更多 buff</string>
    <string name="show_living">直播中</string>
    <string name="show_room_id">ID: %s</string>
    <string name="show_user_count">%d人</string>
    <string name="show_app_name">秀场直播</string>
    <string name="show_live_top_close">Close</string>
    <string name="show_live_bottom_chat">Let\'s Chat</string>
    <string name="show_live_perms_leak_tip" >缺少直播需要的权限，是否重新申请？</string>
    <string name="show_live_yes">是</string>
    <string name="show_live_no">否</string>
    <string name="show_text_input_sent">发送</string>
    <string name="show_text_input_hint">请输入…</string>
    <string name="show_text_input_empty">文本为空</string>
    <string name="show_setting_switch_camera">翻转镜头</string>
    <string name="show_setting_video_on">摄像头开</string>
    <string name="show_setting_video_off">摄像头关</string>
    <string name="show_setting_mic_on">麦克风开</string>
    <string name="show_setting_mic_off">麦克风关</string>
    <string name="show_setting_statistic">实时数据</string>
    <string name="show_setting_quality">画质</string>
    <string name="show_setting_advance_setting">高级设置</string>
    <string name="show_setting_quality_enhance_tip">由于您的机型选择为低端机，为保障设备流畅运行，已关闭超分功能</string>
    <string name="show_setting_quality_enhance_tip2">由于您选择机型或分辨率原因，为保证流畅运行，已为您暂时关闭超分功能</string>
    <string name="show_picture_quality_title">画质选择</string>
    <string name="show_picture_quality_1080p">1080P\n极清</string>
    <string name="show_picture_quality_720p">720P\n超清</string>
    <string name="show_picture_quality_540p">540P\n高清</string>
    <string name="show_picture_quality_360p">360P\n标准</string>
    <string name="show_picture_quality_270p">270P\n流畅</string>
    <string name="show_picture_quality_180p">180P\n低清</string>
    <string name="show_beauty_group_beauty">美颜</string>
    <string name="show_beauty_item_none">无</string>
    <string name="show_beauty_item_beauty_reset">重置</string>
    <string name="show_beauty_item_beauty_smooth">磨皮</string>
    <string name="show_music_effect_title">音乐特效</string>
    <string name="show_music_effect_background">背景音乐</string>
    <string name="show_music_effect_voice">美声</string>
    <string name="show_music_effect_mixing">混响</string>
    <string name="show_music_effect_back_music_joy">欢乐</string>
    <string name="show_music_effect_back_music_romantic">浪漫</string>
    <string name="show_music_effect_back_music_joy2">欢乐2</string>
    <string name="show_music_effect_beauty_voice_original">原声</string>
    <string name="show_music_effect_beauty_voice_sweet">甜美</string>
    <string name="show_music_effect_mixing_ktv">KTV</string>
    <string name="show_music_effect_mixing_concert">演唱会</string>
    <string name="show_live_prepare_title">秀场直播</string>
    <string name="show_live_prepare_rotate">翻转</string>
    <string name="show_live_prepare_beauty">美化</string>
    <string name="show_live_prepare_hd">画质</string>
    <string name="show_live_prepare_tip">本产品仅用于功能体验，单次直播时长不超过%1d分钟</string>
    <string name="show_live_prepare_start_live">开始直播</string>
    <string name="show_live_prepare_room_empty">房间名不能为空！</string>
    <string name="show_live_prepare_room_clipboard_copyed">房间ID已复制到剪切板！</string>
    <string name="show_live_prepare_room_name_hint">请输入房间名称</string>
    <string name="show_beauty_item_beauty_whiten">美白</string>
    <string name="show_beauty_item_beauty_whitenNatural">自然白</string>
    <string name="show_beauty_item_beauty_overall">瘦脸</string>
    <string name="show_beauty_item_beauty_headScale">小头</string>
    <string name="show_beauty_item_beauty_faceSmall">小脸</string>
    <string name="show_beauty_item_beauty_narrowFace">窄脸</string>
    <string name="show_beauty_item_beauty_longFace">长脸</string>
    <string name="show_beauty_item_beauty_cheekbone">瘦颧骨</string>
    <string name="show_beauty_item_beauty_mandible">v脸</string>
    <string name="show_beauty_item_beauty_eye_big">大眼</string>
    <string name="show_beauty_item_beauty_eye_pupil">瞳孔</string>
    <string name="show_beauty_item_beauty_eyelid">眼睑下至</string>
    <string name="show_beauty_item_beauty_eye_position">眼移动</string>
    <string name="show_beauty_item_beauty_eye_distance">眼距</string>
    <string name="show_beauty_item_beauty_eye_corner">眼角</string>
    <string name="show_beauty_item_beauty_eye_innercorner">内眼角</string>
    <string name="show_beauty_item_beauty_eye_outercorner">外眼角</string>
    <string name="show_beauty_item_beauty_eyebrow_position">眉上下</string>
    <string name="show_beauty_item_beauty_eyebrow_thickness">眉粗细</string>
    <string name="show_beauty_item_beauty_nose_long">长鼻</string>
    <string name="show_beauty_item_beauty_nose_width">瘦鼻</string>
    <string name="show_beauty_item_beauty_nose_wing">鼻翼</string>
    <string name="show_beauty_item_beauty_nose_bridge">鼻梁</string>
    <string name="show_beauty_item_beauty_nose_root">山根</string>
    <string name="show_beauty_item_beauty_nose_tip">鼻尖</string>
    <string name="show_beauty_item_beauty_nose_general">鼻综合</string>
    <string name="show_beauty_item_beauty_chin_length">瘦下巴</string>
    <string name="show_beauty_item_beauty_jawbone">下颌骨</string>
    <string name="show_beauty_item_beauty_forehead">额头</string>
    <string name="show_beauty_item_beauty_mouth">嘴型</string>
    <string name="show_beauty_item_beauty_mouth_lip">丰唇</string>
    <string name="show_beauty_item_beauty_mouth_position">缩人中</string>
    <string name="show_beauty_item_beauty_mouth_smile">微笑唇</string>
    <string name="show_beauty_item_beauty_teeth">美牙</string>
    <string name="show_beauty_item_beauty_xiahexian">下颌线</string>
    <string name="show_beauty_item_filter_gentleman_face">绅士脸</string>
    <string name="show_beauty_item_filter_lady_face">淑女脸</string>
    <string name="show_beauty_group_filter">滤镜</string>
    <string name="show_beauty_group_effect">风格妆</string>
    <string name="show_beauty_group_makeup">美妆</string>
    <string name="show_beauty_group_sticker">贴纸</string>
    <string name="show_beauty_item_filter_cream">奶油</string>
    <string name="show_beauty_item_filter_mokalong">马卡龙</string>
    <string name="show_beauty_item_filter_oxgen">氧气</string>
    <string name="show_beauty_item_filter_wuyu">物语</string>
    <string name="show_beauty_item_filter_po9">海边人物</string>
    <string name="show_beauty_item_filter_lolita">洛丽塔</string>
    <string name="show_beauty_item_filter_mitao">蜜桃</string>
    <string name="show_beauty_item_filter_yinhua">樱花</string>
    <string name="show_beauty_item_filter_beihaidao">北海道</string>
    <string name="show_beauty_item_filter_s3">旅途</string>
    <string name="show_beauty_item_filter_original">原生</string>
    <string name="show_beauty_item_filter_whitening">嫩白</string>
    <string name="show_beauty_item_filter_cool_white">冷白</string>
    <string name="show_beauty_item_filter_baitao">白桃</string>
    <string name="show_beauty_item_filter_baici">白瓷</string>
    <string name="show_beauty_item_filter_cangmo">苍墨</string>
    <string name="show_beauty_item_filter_suda">苏打</string>
    <string name="show_beauty_item_filter_jiaopian">胶片</string>
    <string name="show_beauty_item_filter_menghuan">梦幻</string>
    <string name="show_beauty_item_filter_mianrong">棉绒</string>
    <string name="show_beauty_item_filter_jiqin">霁晴</string>
    <string name="show_beauty_item_filter_yuebai">月白</string>
    <string name="show_beauty_item_filter_manhua">漫画</string>
    <string name="show_beauty_item_filter_naiyou">奶油</string>
    <string name="show_beauty_item_filter_liujin">流金</string>
    <string name="show_beauty_item_filter_ningxia">柠夏</string>
    <string name="show_beauty_item_filter_shenshi">绅士</string>
    <string name="show_beauty_item_filter_richang">日常</string>
    <string name="show_beauty_item_filter_dushi">都市</string>
    <string name="show_beauty_item_filter_chenwen">沉稳</string>
    <string name="show_beauty_item_filter_xiangcao">香草</string>
    <string name="show_beauty_item_filter_liuguang">流光</string>
    <string name="show_beauty_item_filter_natie">拿铁</string>
    <string name="show_beauty_item_filter_chuxue">初雪</string>
    <string name="show_beauty_item_filter_fenxia">粉霞</string>
    <string name="show_beauty_item_filter_weixun">微醺</string>
    <string name="show_beauty_item_filter_yanzhi">胭脂</string>
    <string name="show_beauty_item_filter_huaijiu">怀旧</string>
    <string name="show_beauty_item_filter_jiaotang">焦糖</string>
    <string name="show_beauty_item_filter_xunyicao">薰衣草</string>
    <string name="show_beauty_item_filter_yinyun">氤氲</string>
    <string name="show_beauty_item_filter_qise">气色</string>
    <string name="show_beauty_item_filter_yanqishui">盐汽水</string>
    <string name="show_beauty_item_filter_chenmi">沉谧</string>
    <string name="show_beauty_item_filter_ins">ins风</string>
    <string name="show_beauty_item_filter_paofu">泡芙</string>
    <string name="show_beauty_item_filter_zhigan">质感</string>
    <string name="show_beauty_item_filter_sicang">私藏</string>
    <string name="show_beauty_item_filter_baicha">白茶</string>
    <string name="show_beauty_item_filter_laojie">老街</string>
    <string name="show_beauty_item_effect_baixi">白皙</string>
    <string name="show_beauty_item_effect_tianmei">甜美</string>
    <string name="show_beauty_item_effect_xuejie">学姐</string>
    <string name="show_beauty_item_effect_xuemei">学妹</string>
    <string name="show_beauty_item_effect_shaonv">少女</string>
    <string name="show_beauty_item_effect_qizhi">气质</string>
    <string name="show_beauty_item_effect_fenyun">粉晕</string>
    <string name="show_beauty_item_effect_qiaopi">俏皮</string>
    <string name="show_beauty_item_effect_shenshui">深邃</string>
    <string name="show_beauty_item_effect_yinyun">氤氲</string>
    <string name="show_beauty_item_effect_youya">优雅</string>
    <string name="show_beauty_item_effect_cwei">C位</string>
    <string name="show_beauty_item_effect_yuanqi">元气</string>
    <string name="show_beauty_item_sticker_biti">鼻涕</string>
    <string name="show_beauty_item_sticker_zhounian">周年狂欢</string>
    <string name="show_beauty_item_sticker_huahua">花花</string>
    <string name="show_beauty_item_sticker_520">520</string>
    <string name="show_beauty_item_sticker_shangbanle">上班了</string>
    <string name="show_statistic_up_bitrate">发送码率: %s kbps</string>
    <string name="show_statistic_down_bitrate">接收码率: %s kbps</string>
    <string name="show_statistic_delay">延迟: %s ms</string>
    <string name="show_statistic_up_net_speech">上行网络: %s KB/s</string>
    <string name="show_statistic_down_net_speech">下行网络: %s KB/s</string>
    <string name="show_statistic_up">发送端</string>
    <string name="show_statistic_encode_resolution">编码分辨率: %s</string>
    <string name="show_statistic_encode_fps">编码帧率: %s fps</string>
    <string name="show_statistic_up_loss_package">上行丢包率: %s ％</string>
    <string name="show_statistic_down">接收端</string>
    <string name="show_statistic_receive_resolution">接收分辨率: %s</string>
    <string name="show_statistic_receive_fps">接收帧率: %s fps</string>
    <string name="show_statistic_down_loss_package">下行丢包率: %s ％</string>
    <string name="show_setting_confirm">确认</string>
    <string name="show_setting_preset_title">画质推荐配置</string>
    <string name="show_setting_preset_show_title">秀场模式</string>
    <string name="show_setting_preset_show_description">主播通常采用上半身坐姿开展聊天对话为主的直播形式，画面主要展现主播的妆容和上装穿搭，以低频动作为主</string>
    <string name="show_setting_preset_device_low">低端机</string>
    <string name="show_setting_preset_device_medium">中端机</string>
    <string name="show_setting_preset_device_high">高端机</string>
    <string name="show_setting_preset_device_low_des">2500元及以下  </string>
    <string name="show_setting_preset_device_medium_des">2501元到4000元</string>
    <string name="show_setting_preset_device_high_des">4001元以上    </string>
    <string name="show_setting_preset_recommend">推荐</string>
</resources>