<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/base_status_height"
    tools:theme="@style/Theme.AppCompat">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="16dp"
            android:src="@mipmap/show_setting_advance_ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/show_setting_preset_title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="16dp"
            android:text="@string/show_setting_confirm"
            android:textColor="#7A59FB"
            android:textSize="14sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/show_setting_preset_group_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/showTvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_setting_preset_show_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/showTvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/show_setting_preset_show_description"
                    android:textColor="#3C4267"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/showTvTitle" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/showChooseItemLowDevice"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/show_setting_preset_item_bg"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    app:layout_constraintTop_toBottomOf="@id/showTvDescription">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/show_setting_preset_device_low"
                        android:textColor="#040A25"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/showLowDeviceDes"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@mipmap/show_setting_preset_ic_android"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/show_setting_preset_device_low_des"
                        android:textColor="#6D7291"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/show_setting_preset_recommend_bg"
                        android:gravity="center"
                        android:paddingHorizontal="6dp"
                        android:text="@string/show_setting_preset_recommend"
                        android:visibility="gone"
                        android:textColor="#CE27FB"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/showLowDeviceDes"
                        app:layout_constraintStart_toEndOf="@id/showLowDeviceDes"
                        app:layout_constraintTop_toTopOf="@id/showLowDeviceDes" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/showChooseItemMediumDevice"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/show_setting_preset_item_bg"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    app:layout_constraintTop_toBottomOf="@id/showChooseItemLowDevice">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/show_setting_preset_device_medium"
                        android:textColor="#040A25"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@mipmap/show_setting_preset_ic_android"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/show_setting_preset_device_medium_des"
                        android:textColor="#6D7291"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/showChooseItemHighDevice"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/show_setting_preset_item_bg"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    app:layout_constraintTop_toBottomOf="@id/showChooseItemMediumDevice">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/show_setting_preset_device_high"
                        android:textColor="#040A25"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@mipmap/show_setting_preset_ic_android"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/show_setting_preset_device_high_des"
                        android:textColor="#6D7291"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>